--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,3 +3,4 @@ NODE_ENV = DEVELOPMENT
 DB_ENV_URL = mongodb://localhost:27017/fullmeanecom
 JWT_SECRET = abslisdkjaskdjfd2213
 JWT_EXPIRES_TIME = 7d
+COOKIE_EXPIRES_TIME = 7 
