--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,3 +4,9 @@ DB_ENV_URL = mongodb://localhost:27017/fullmeanecom
 JWT_SECRET = abslisdkjaskdjfd2213
 JWT_EXPIRES_TIME = 7d
 COOKIE_EXPIRES_TIME = 7 
+SMTP_HOST = smtp.mailtrap.io
+SMTP_PORT = 2525
+SMTP_EMAIL = bd64efc7ee586b
+SMTP_PASSWORD = d11b50e305b577
+SMTP_FROM_EMAIL = noreply@arifrumel.com
+SMTP_FROM_NAME = Arif Rumel
